--- a/index.html
+++ b/index.html
@@ -199,21 +199,21 @@
         name: 'Wireless Headphones',
         features: ['Noise Cancelling', 'Bluetooth 5.0', '20-hour Battery'],
         price: '₹2,499',
-        image: 'images/bodywash.jpg',
+        image: 'bodywash.jpg',
         brandLink: 'https://innovist.com/products/lactic-acid-zemea-vitamin-e-exfoliating-body-wash/'
       },
       {
         name: 'Smart Watch',
         features: ['Heart Rate Monitor', 'Water Resistant', 'AMOLED Display'],
         price: '₹3,999',
-        image: 'images/bodylotion.jpg',
+        image: 'bodylotion.jpg',
         brandLink: 'https://innovist.com/products/aha-body-lotion'
       },
       {
         name: 'Portable Speaker',
         features: ['360° Sound', 'Waterproof', '12-hour Playtime'],
         price: '₹1,799',
-        image: 'images/RollOn.jpg',
+        image: 'RollOn.jpg',
         brandLink: 'https://innovist.com/products/neck-knee-elbow-brightening-roll-on-1/'
       }
     ];
@@ -265,3 +265,4 @@
 
 </body>
 </html>
+
