--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Interactive Product Showcase</title>
+  <title>Skin care products</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -265,4 +265,5 @@
 
 </body>
 </html>
+
 
