--- a/index.html
+++ b/index.html
@@ -196,23 +196,23 @@
   <script>
     const products = [
       {
-        name: 'Wireless Headphones',
-        features: ['Noise Cancelling', 'Bluetooth 5.0', '20-hour Battery'],
-        price: '₹2,499',
+        name: 'Exfoliating Body Wash with Lactic Acid',
+        features: ['Removes Dead Skin','Unclogs pores','Treats Bumpy Skin'],
+        price: '₹379',
         image: 'bodywash.jpg',
         brandLink: 'https://innovist.com/products/lactic-acid-zemea-vitamin-e-exfoliating-body-wash/'
       },
       {
-        name: 'Smart Watch',
-        features: ['Heart Rate Monitor', 'Water Resistant', 'AMOLED Display'],
-        price: '₹3,999',
+        name: 'AHA Body Lotion with Niacinamide & Shea Butter',
+        features: ['Reduces Signs of Ageing','Smoothens Skin','Evens Out Skin Tone'],
+        price: '₹399',
         image: 'bodylotion.jpg',
         brandLink: 'https://innovist.com/products/aha-body-lotion'
       },
       {
-        name: 'Portable Speaker',
-        features: ['360° Sound', 'Waterproof', '12-hour Playtime'],
-        price: '₹1,799',
+        name: 'Neck, Knee, Elbow Brightening Roll On',
+        features: ['Removes Dead Skin','Brightens Skin','Removes Pigmentation'],
+        price: '₹332',
         image: 'RollOn.jpg',
         brandLink: 'https://innovist.com/products/neck-knee-elbow-brightening-roll-on-1/'
       }
@@ -265,5 +265,6 @@
 
 </body>
 </html>
+
 
 
