--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body>
 
   <header>
-    🛍️ Interactive Product Showcase
+    🛍️ Skin care products
   </header>
 
   <div class="search-bar">
@@ -265,6 +265,7 @@
 
 </body>
 </html>
+
 
 
 
